# ModelChannel

./: .gitignore  CMakeLists.txt  CMakeLists.txt1.txt  CMakeLists1.txt  MSD.cppcheck  README.md  api.hpp  diplom.cpp  dsk.cpp  dsk.hpp  nad_met1.doc  pa.hpp  s.hpp  trash.txt  Диплом — копия — копия (2).docx  Диплом.docx  тесты ОПП 0,9 0,8.txt  тесты ОПП 0,9 0,9.txt  тесты ОПП 1 0,98.txt  тесты.txt
DSK Test/: DSK_model p = 0.005 code(23, 17, 3, 8).txt  DSK_model p = 0.005 code(31, 11, 5, 1).txt  DSK_model p = 0.005 code(31, 21, 2, 1).txt  DSK_model p = 0.005 code(63, 57, 1, 1).txt  DSK_model p = 0.01 code(31, 11, 5, 1).txt  DSK_model p = 0.01 code(31, 16, 3, 1).txt  DSK_model p = 0.01 code(31, 21, 2, 1).txt  DSK_model p = 0.01 code(63, 57, 1, 1).txt  DSK_model p = 0.05 code(23, 17, 3, 8).txt  DSK_model p = 0.05 code(31, 11, 5, 1).txt  DSK_model p = 0.05 code(63, 57, 1, 1).txt
DSK Test/Новые тесты/: DSK_model p = 0.005 code(23, 17, 3, 8).txt  DSK_model p = 0.005 code(31, 11, 5, 1).txt  DSK_model p = 0.005 code(31, 16, 3, 1).txt  DSK_model p = 0.005 code(31, 21, 2, 1).txt  DSK_model p = 0.005 code(31, 26, 1, 1).txt  DSK_model p = 0.005 code(63, 57, 1, 1).txt  DSK_model p = 0.01 code(23, 17, 3, 8).txt  DSK_model p = 0.01 code(31, 11, 5, 1).txt  DSK_model p = 0.01 code(31, 16, 3, 1).txt  DSK_model p = 0.01 code(31, 21, 2, 1).txt  DSK_model p = 0.01 code(31, 26, 1, 1).txt  DSK_model p = 0.01 code(63, 57, 1, 1).txt  DSK_model p = 0.05 code(23, 17, 3, 8).txt  DSK_model p = 0.05 code(31, 11, 5, 1).txt  DSK_model p = 0.05 code(31, 16, 3, 1).txt  DSK_model p = 0.05 code(31, 21, 2, 1).txt  DSK_model p = 0.05 code(31, 26, 1, 1).txt  DSK_model p = 0.05 code(63, 57, 1, 1).txt
OPP Test/: OPP_model A = 0.9, V = 0.8 code(31, 26, 1, 1).txt  OPP_model A = 0.9, V = 0.9 code(31, 16, 3, 1).txt  OPP_model A = 0.9, V = 0.9 code(31, 26, 1, 1).txt  OPP_model A = 0.9, V = 0.9 code(63, 57, 1, 1).txt  OPP_model A = 1, V = 0.98 code(23, 17, 3, 8) РС8.txt  OPP_model A = 1, V = 0.98 code(31, 11, 5, 1) БЧХ.txt  OPP_model A = 1, V = 0.98 code(31, 16, 3, 1) БЧХ.txt  OPP_model A = 1, V = 0.98 code(31, 21, 2, 1).txt  OPP_model A = 1, V = 0.98 code(31, 26, 1, 1) Хэмминг.txt  OPP_model A = 1, V = 0.98 code(63, 57, 1, 1).txt
OPP Test/Новые тесты/: OPP_model A = 0.9, V = 0.8 code(23, 17, 3, 8).txt  OPP_model A = 0.9, V = 0.8 code(31, 11, 5, 1).txt  OPP_model A = 0.9, V = 0.8 code(31, 16, 3, 1).txt  OPP_model A = 0.9, V = 0.8 code(31, 21, 2, 1).txt  OPP_model A = 0.9, V = 0.8 code(31, 26, 1, 1).txt  OPP_model A = 0.9, V = 0.8 code(63, 57, 1, 1).txt  OPP_model A = 0.9, V = 0.9 code(23, 17, 3, 8).txt  OPP_model A = 0.9, V = 0.9 code(31, 11, 5, 1).txt  OPP_model A = 0.9, V = 0.9 code(31, 16, 3, 1).txt  OPP_model A = 0.9, V = 0.9 code(31, 21, 2, 1).txt  OPP_model A = 0.9, V = 0.9 code(31, 26, 1, 1).txt  OPP_model A = 0.9, V = 0.9 code(63, 57, 1, 1).txt  OPP_model A = 1, V = 0.9 code(23, 17, 3, 8).txt  OPP_model A = 1, V = 0.9 code(31, 11, 5, 1).txt  OPP_model A = 1, V = 0.9 code(31, 16, 3, 1).txt  OPP_model A = 1, V = 0.9 code(31, 21, 2, 1).txt  OPP_model A = 1, V = 0.9 code(31, 26, 1, 1).txt  OPP_model A = 1, V = 0.9 code(63, 57, 1, 1).txt
Theory/: Modelirovanie_Potokov_Oshibok_Diskretnykh_Kanalov.docx  dsk — копия.cpp  dsk — копия.hpp  Двоичный симметричный канал.docx  Диплом — копия (2).docx  Диплом — копия — копия (2) — копия — копия.docx  Диплом — копия — копия (2) — копия.docx  Диплом — копия — копия.docx  Диплом — копия.docx  Диплом.docx  Документ Microsoft Word.docx  ЗаданиеБакСавгиря.doc  НИР.pptx  ОПП.xls  Отчет по НИР.docx  Способ моделирования канала связи (RU 2254675).docx
results/: DSK_model p = 0.001 code(1, 1, 0, 0).txt  DSK_model p = 0.001 code(23, 17, 3, 8).txt  DSK_model p = 0.001 code(30, 20, 4, 8).txt  DSK_model p = 0.001 code(31, 20, 2, 1).txt  DSK_model p = 0.001 code(31, 21, 2, 8).txt  DSK_model p = 0.001 code(31, 26, 3, 1).txt  DSK_model p = 0.001 code(63, 51, 2, 1).txt  DSK_model p = 0.005 code(1, 1, 0, 0).txt  DSK_model p = 0.005 code(23, 17, 3, 8).txt  DSK_model p = 0.005 code(30, 20, 4, 8).txt  DSK_model p = 0.005 code(31, 20, 2, 1).txt  DSK_model p = 0.005 code(31, 21, 2, 8).txt  DSK_model p = 0.005 code(31, 26, 3, 1).txt  DSK_model p = 0.005 code(63, 51, 2, 1).txt  DSK_model p = 0.01 code(1, 1, 0, 0).txt  DSK_model p = 0.01 code(23, 17, 3, 8).txt  DSK_model p = 0.01 code(30, 20, 4, 8).txt  DSK_model p = 0.01 code(31, 20, 2, 1).txt  DSK_model p = 0.01 code(31, 21, 2, 8).txt  DSK_model p = 0.01 code(31, 26, 3, 1).txt  DSK_model p = 0.01 code(63, 51, 2, 1).txt  OPP_model A = 100, V = 1.094 code(1, 1, 0, 0).txt  OPP_model A = 100, V = 1.094 code(23, 17, 3, 8).txt  OPP_model A = 100, V = 1.094 code(30, 20, 4, 8).txt  OPP_model A = 100, V = 1.094 code(31, 20, 2, 1).txt  OPP_model A = 100, V = 1.094 code(31, 21, 2, 8).txt  OPP_model A = 100, V = 1.094 code(31, 26, 3, 1).txt  OPP_model A = 100, V = 1.094 code(63, 51, 2, 1).txt  OPP_model A = 125, V = 1.1 code(1, 1, 0, 0).txt  OPP_model A = 125, V = 1.1 code(23, 17, 3, 8).txt  OPP_model A = 125, V = 1.1 code(30, 20, 4, 8).txt  OPP_model A = 125, V = 1.1 code(31, 20, 2, 1).txt  OPP_model A = 125, V = 1.1 code(31, 21, 2, 8).txt  OPP_model A = 125, V = 1.1 code(31, 26, 3, 1).txt  OPP_model A = 125, V = 1.1 code(63, 51, 2, 1).txt  OPP_model A = 95, V = 1.125 code(1, 1, 0, 0).txt  OPP_model A = 95, V = 1.125 code(23, 17, 3, 8).txt  OPP_model A = 95, V = 1.125 code(30, 20, 4, 8).txt  OPP_model A = 95, V = 1.125 code(31, 20, 2, 1).txt  OPP_model A = 95, V = 1.125 code(31, 21, 2, 8).txt  (+2 more)
src/: Cuboid.cpp  Cuboid.h  DskUnitTest.cpp  GLWindow.cpp  GLWindow.hpp  Graph.cpp  Graph.h  OppUnitTest.cpp  PaUnitTest.cpp  UnitTestsApi.cpp  UnitTestsApi.h  api.cpp  api.hpp  axis.cpp  axis.h  curve.cpp  curve.h  dsk.cpp  dsk.hpp  grid.h  main.cpp  main.h  opp.cpp  opp.h  pa.cpp  pa.h  plot.cpp  plot.h  protocol.cpp  protocol.h
Диаграммы/: Диаграмма1.dia  Диаграмма2.dia  Диаграмма3.dia~
